--- a/NAPS2.Core/WinForms/FConfigurePrj.FR.resx
+++ b/NAPS2.Core/WinForms/FConfigurePrj.FR.resx
@@ -121,7 +121,7 @@
     <value>Configuration des sorties de projet</value>
   </data>
   <data name="BTN_Update.Text" xml:space="preserve">
-    <value>Met à jour la configuration</value>
+    <value>Met à jour les réglages</value>
   </data>
   <data name="BT_Apply.Text" xml:space="preserve">
     <value>Appliquer sur la configuration</value>
@@ -130,27 +130,27 @@
     <value>Annuler</value>
   </data>
   <data name="BT_chgProjectName.Text" xml:space="preserve">
-    <value>Changer le nom du projet</value>
+    <value>Changer le nom du lot</value>
   </data>
   <data name="BT_ExportConfig.Text" xml:space="preserve">
-    <value>Modifier la configuration active</value>
+    <value>Modifier les réglages actifs</value>
   </data>
   <data name="Bt_New.Text" xml:space="preserve">
-    <value>Créer à partir de la configuration actuelle</value>
+    <value>Créer à partir des réglages actuel</value>
   </data>
   <data name="BT_OK.Text" xml:space="preserve">
     <value>OK</value>
   </data>
   <data name="BT_Remove.Text" xml:space="preserve">
-    <value>Supprimer la configuration sélectionnée</value>
+    <value>Supprimer les réglages</value>
   </data>
   <data name="groupBox1.Text" xml:space="preserve">
     <value>Gestion des configuration d'exportation</value>
   </data>
   <data name="LBL_Name.Text" xml:space="preserve">
-    <value>Nom de la configuration courante</value>
+    <value>Nom des réglages courant</value>
   </data>
   <data name="TB_Rename.Text" xml:space="preserve">
-    <value>Changer le nom de la configuration</value>
+    <value>Changer le nom du réglage</value>
   </data>
 </root>
