--- a/NAPS2.Core/WinForms/FExport.resx
+++ b/NAPS2.Core/WinForms/FExport.resx
@@ -129,7 +129,7 @@
     <value>True</value>
   </data>
   <data name="tb_CSVExpression.Size" type="System.Drawing.Size, System.Drawing">
-    <value>501, 69</value>
+    <value>381, 69</value>
   </data>
   <data name="tb_CSVExpression.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -150,10 +150,10 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="btn_Expression.Location" type="System.Drawing.Point, System.Drawing">
-    <value>541, 120</value>
+    <value>409, 41</value>
   </data>
   <data name="btn_Expression.Size" type="System.Drawing.Size, System.Drawing">
-    <value>189, 30</value>
+    <value>131, 30</value>
   </data>
   <data name="btn_Expression.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -174,10 +174,10 @@
     <value>7</value>
   </data>
   <data name="Expression_add.Location" type="System.Drawing.Point, System.Drawing">
-    <value>530, 242</value>
+    <value>409, 243</value>
   </data>
   <data name="Expression_add.Size" type="System.Drawing.Size, System.Drawing">
-    <value>189, 30</value>
+    <value>131, 30</value>
   </data>
   <data name="Expression_add.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -198,13 +198,13 @@
     <value>0</value>
   </data>
   <data name="LB_Expressions.ItemHeight" type="System.Int32, mscorlib">
-    <value>28</value>
+    <value>17</value>
   </data>
   <data name="LB_Expressions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>530, 52</value>
+    <value>409, 52</value>
   </data>
   <data name="LB_Expressions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>189, 172</value>
+    <value>131, 157</value>
   </data>
   <data name="LB_Expressions.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
@@ -232,7 +232,7 @@
     <value>4, 0, 4, 0</value>
   </data>
   <data name="lbl_meta.Size" type="System.Drawing.Size, System.Drawing">
-    <value>643, 58</value>
+    <value>382, 63</value>
   </data>
   <data name="lbl_meta.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -310,7 +310,7 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="lbl_FilenameCSV.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 210</value>
+    <value>15, 210</value>
   </data>
   <data name="lbl_FilenameCSV.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -340,13 +340,13 @@
     <value>Microsoft Sans Serif, 10pt</value>
   </data>
   <data name="tb_exportFilename.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 243</value>
+    <value>15, 243</value>
   </data>
   <data name="tb_exportFilename.Multiline" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="tb_exportFilename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>501, 30</value>
+    <value>381, 30</value>
   </data>
   <data name="tb_exportFilename.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -370,10 +370,10 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>23, 325</value>
+    <value>12, 279</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>735, 297</value>
+    <value>548, 297</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -400,10 +400,10 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="cb_CSVEnabler.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 287</value>
+    <value>12, 250</value>
   </data>
   <data name="cb_CSVEnabler.Size" type="System.Drawing.Size, System.Drawing">
-    <value>245, 32</value>
+    <value>173, 23</value>
   </data>
   <data name="cb_CSVEnabler.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -427,13 +427,13 @@
     <value>Microsoft Sans Serif, 10pt</value>
   </data>
   <data name="tb_ExportPath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>11, 120</value>
+    <value>6, 103</value>
   </data>
   <data name="tb_ExportPath.Multiline" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="tb_ExportPath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>517, 25</value>
+    <value>391, 25</value>
   </data>
   <data name="tb_ExportPath.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -460,10 +460,10 @@
     <value>NoControl</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 89</value>
+    <value>7, 81</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>50, 28</value>
+    <value>37, 19</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -490,7 +490,7 @@
     <value>NoControl</value>
   </data>
   <data name="BTN_OK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>687, 628</value>
+    <value>490, 582</value>
   </data>
   <data name="BTN_OK.Size" type="System.Drawing.Size, System.Drawing">
     <value>70, 30</value>
@@ -520,7 +520,7 @@
     <value>NoControl</value>
   </data>
   <data name="BTN_Cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>611, 628</value>
+    <value>414, 582</value>
   </data>
   <data name="BTN_Cancel.Size" type="System.Drawing.Size, System.Drawing">
     <value>70, 30</value>
@@ -550,10 +550,10 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="BTN_File.Location" type="System.Drawing.Point, System.Drawing">
-    <value>541, 33</value>
+    <value>409, 81</value>
   </data>
   <data name="BTN_File.Size" type="System.Drawing.Size, System.Drawing">
-    <value>189, 81</value>
+    <value>131, 64</value>
   </data>
   <data name="BTN_File.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -583,13 +583,13 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 148</value>
+    <value>6, 131</value>
   </data>
   <data name="label4.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 28</value>
+    <value>59, 19</value>
   </data>
   <data name="label4.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -613,13 +613,13 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="LBL_Exemple.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 176</value>
+    <value>6, 150</value>
   </data>
   <data name="LBL_Exemple.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="LBL_Exemple.Size" type="System.Drawing.Size, System.Drawing">
-    <value>723, 59</value>
+    <value>493, 53</value>
   </data>
   <data name="LBL_Exemple.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -649,10 +649,10 @@
     <value>NoControl</value>
   </data>
   <data name="lbl_filename.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 28</value>
+    <value>2, 21</value>
   </data>
   <data name="lbl_filename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>90, 28</value>
+    <value>63, 19</value>
   </data>
   <data name="lbl_filename.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -676,13 +676,13 @@
     <value>Microsoft Sans Serif, 10pt</value>
   </data>
   <data name="TB_filename.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 61</value>
+    <value>6, 43</value>
   </data>
   <data name="TB_filename.Multiline" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="TB_filename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>317, 25</value>
+    <value>259, 27</value>
   </data>
   <data name="TB_filename.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -700,10 +700,10 @@
     <value>3</value>
   </data>
   <data name="CB_Filetype.Location" type="System.Drawing.Point, System.Drawing">
-    <value>335, 61</value>
+    <value>271, 45</value>
   </data>
   <data name="CB_Filetype.Size" type="System.Drawing.Size, System.Drawing">
-    <value>193, 36</value>
+    <value>126, 25</value>
   </data>
   <data name="CB_Filetype.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -719,27 +719,6 @@
   </data>
   <data name="&gt;&gt;CB_Filetype.ZOrder" xml:space="preserve">
     <value>4</value>
-  </data>
-  <data name="label5.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label5.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Segoe UI, 10pt</value>
-  </data>
-  <data name="label5.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>330, 28</value>
-  </data>
-  <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>81, 28</value>
-  </data>
-  <data name="label5.TabIndex" type="System.Int32, mscorlib">
-    <value>16</value>
-  </data>
-  <data name="label5.Text" xml:space="preserve">
-    <value>Filetype</value>
   </data>
   <data name="&gt;&gt;label5.Name" xml:space="preserve">
     <value>label5</value>
@@ -760,7 +739,7 @@
     <value>12, 12</value>
   </data>
   <data name="groupBox2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>746, 257</value>
+    <value>548, 217</value>
   </data>
   <data name="groupBox2.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -780,11 +759,44 @@
   <data name="&gt;&gt;groupBox2.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="label5.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label5.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
+  <data name="label5.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
+    <value>273, 21</value>
+  </data>
+  <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>56, 19</value>
+  </data>
+  <data name="label5.TabIndex" type="System.Int32, mscorlib">
+    <value>16</value>
+  </data>
+  <data name="label5.Text" xml:space="preserve">
+    <value>Filetype</value>
+  </data>
+  <data name="&gt;&gt;label5.Name" xml:space="preserve">
+    <value>label5</value>
+  </data>
+  <data name="&gt;&gt;label5.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label5.Parent" xml:space="preserve">
+    <value>groupBox2</value>
+  </data>
+  <data name="&gt;&gt;label5.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>772, 671</value>
+    <value>572, 621</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 8pt</value>
@@ -799,6 +811,6 @@
     <value>FExport</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.38018, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.19798, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
