--- a/NAPS2.Core/WinForms/FConfigurePrj.resx
+++ b/NAPS2.Core/WinForms/FConfigurePrj.resx
@@ -122,10 +122,14 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_chgProjectName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>245, 270</value>
+    <value>368, 405</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BT_chgProjectName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="BT_chgProjectName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>208, 30</value>
+    <value>312, 45</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="BT_chgProjectName.TabIndex" type="System.Int32, mscorlib">
@@ -150,10 +154,13 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_OK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>383, 306</value>
+    <value>574, 459</value>
+  </data>
+  <data name="BT_OK.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="BT_OK.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 30</value>
+    <value>105, 45</value>
   </data>
   <data name="BT_OK.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -176,15 +183,17 @@
   <data name="BT_cancel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 10pt</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="BT_cancel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="BT_cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>307, 306</value>
+    <value>460, 459</value>
+  </data>
+  <data name="BT_cancel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="BT_cancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 30</value>
+    <value>105, 45</value>
   </data>
   <data name="BT_cancel.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -211,10 +220,13 @@
     <value>NoControl</value>
   </data>
   <data name="BT_ExportConfig.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 270</value>
+    <value>18, 405</value>
+  </data>
+  <data name="BT_ExportConfig.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="BT_ExportConfig.Size" type="System.Drawing.Size, System.Drawing">
-    <value>208, 30</value>
+    <value>312, 45</value>
   </data>
   <data name="BT_ExportConfig.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -238,13 +250,16 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="LB_ConfigList.ItemHeight" type="System.Int32, mscorlib">
-    <value>17</value>
+    <value>28</value>
   </data>
   <data name="LB_ConfigList.Location" type="System.Drawing.Point, System.Drawing">
-    <value>15, 27</value>
+    <value>22, 40</value>
+  </data>
+  <data name="LB_ConfigList.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="LB_ConfigList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 191</value>
+    <value>256, 284</value>
   </data>
   <data name="LB_ConfigList.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -259,16 +274,19 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;LB_ConfigList.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>1</value>
   </data>
   <data name="Bt_New.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="Bt_New.Location" type="System.Drawing.Point, System.Drawing">
-    <value>193, 27</value>
+    <value>290, 40</value>
+  </data>
+  <data name="Bt_New.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="Bt_New.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
+    <value>339, 45</value>
   </data>
   <data name="Bt_New.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -286,22 +304,25 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;Bt_New.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="BT_Apply.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_Apply.Location" type="System.Drawing.Point, System.Drawing">
-    <value>193, 188</value>
+    <value>290, 282</value>
+  </data>
+  <data name="BT_Apply.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="BT_Apply.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
+    <value>339, 45</value>
   </data>
   <data name="BT_Apply.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
   </data>
   <data name="BT_Apply.Text" xml:space="preserve">
-    <value>Apply to active</value>
+    <value>Use selected configuration</value>
   </data>
   <data name="&gt;&gt;BT_Apply.Name" xml:space="preserve">
     <value>BT_Apply</value>
@@ -313,16 +334,19 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;BT_Apply.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>4</value>
   </data>
   <data name="BT_Remove.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_Remove.Location" type="System.Drawing.Point, System.Drawing">
-    <value>193, 152</value>
+    <value>290, 228</value>
+  </data>
+  <data name="BT_Remove.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="BT_Remove.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
+    <value>339, 45</value>
   </data>
   <data name="BT_Remove.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -340,46 +364,19 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;BT_Remove.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="BTN_Update.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Segoe UI, 10pt</value>
-  </data>
-  <data name="BTN_Update.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="BTN_Update.Location" type="System.Drawing.Point, System.Drawing">
-    <value>193, 116</value>
-  </data>
-  <data name="BTN_Update.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
-  <data name="BTN_Update.TabIndex" type="System.Int32, mscorlib">
-    <value>5</value>
-  </data>
-  <data name="BTN_Update.Text" xml:space="preserve">
-    <value>Update selected configuration</value>
-  </data>
-  <data name="&gt;&gt;BTN_Update.Name" xml:space="preserve">
-    <value>BTN_Update</value>
-  </data>
-  <data name="&gt;&gt;BTN_Update.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;BTN_Update.Parent" xml:space="preserve">
-    <value>groupBox1</value>
-  </data>
-  <data name="&gt;&gt;BTN_Update.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="TB_Rename.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="TB_Rename.Location" type="System.Drawing.Point, System.Drawing">
-    <value>193, 63</value>
+    <value>290, 94</value>
+  </data>
+  <data name="TB_Rename.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="TB_Rename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
+    <value>339, 45</value>
   </data>
   <data name="TB_Rename.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -397,16 +394,22 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;TB_Rename.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>0</value>
   </data>
   <data name="groupBox1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt</value>
   </data>
   <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 34</value>
+    <value>18, 51</value>
+  </data>
+  <data name="groupBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="groupBox1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>439, 230</value>
+    <value>658, 345</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -430,10 +433,13 @@
     <value>Segoe UI, 10pt</value>
   </data>
   <data name="TB_ConfigName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>252, 8</value>
+    <value>378, 12</value>
+  </data>
+  <data name="TB_ConfigName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="TB_ConfigName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>198, 25</value>
+    <value>296, 34</value>
   </data>
   <data name="TB_ConfigName.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -460,10 +466,13 @@
     <value>NoControl</value>
   </data>
   <data name="LBL_Name.Location" type="System.Drawing.Point, System.Drawing">
-    <value>18, 12</value>
+    <value>27, 18</value>
+  </data>
+  <data name="LBL_Name.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="LBL_Name.Size" type="System.Drawing.Size, System.Drawing">
-    <value>223, 15</value>
+    <value>332, 25</value>
   </data>
   <data name="LBL_Name.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -487,10 +496,10 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>96, 96</value>
+    <value>144, 144</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>465, 348</value>
+    <value>698, 522</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9pt</value>
@@ -751,6 +760,9 @@
         AADgBwAAwAMAAMADAADAAwAAwAMAAMAHAAA=
 </value>
   </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Project output configuration</value>
   </data>
@@ -758,6 +770,6 @@
     <value>FConfigurePrj</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.25461, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.28205, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
